implicit Intent And WebView

--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -37,7 +37,7 @@
             android:layout_marginBottom="20dp"/>
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btnNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
