--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,13 +3,15 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#A587E2</color>
-    <color name="yellow">#ECDC5C</color>
+    <color name="yellow">#FFE800</color>
     <color name="orange">#FF5722</color>
     <color name="skyBlue">#03A9F4</color>
-    <color name="pink">#E91E63</color>
+    <color name="pink">#fc035a</color>
+    <color name="babypink">#F8B7E3</color>
     <color name="green">#4CAF50</color>
     <color name="violet">#BC03F4</color>
-    <color name="grey">#BDB9B9</color>
+    <color name="grey">#FFF7F7</color>
+    <color name="navyBlue">#4A73C7</color>
 
 
 </resources>
