discover data passing b/w activity

--- a/app/src/main/res/layout/activity_implicit_intent.xml
+++ b/app/src/main/res/layout/activity_implicit_intent.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ImplicitIntentActivity">
+    tools:context=".Basics.ImplicitIntentActivity">
 
     <ScrollView
         android:layout_width="match_parent"
