--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="green">#4CAF50</color>
     <color name="violet">#BC03F4</color>
     <color name="grey">#FFF7F7</color>
+    <color name="brown">#603F26</color>
+    <color name="lightBrown">#FFDBB5</color>
     <color name="navyBlue">#4A73C7</color>
 
 
