--- a/app/src/main/res/layout/activity_android.xml
+++ b/app/src/main/res/layout/activity_android.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Project.AndroidActivity"
-    android:background="@color/navyBlue">
+    android:background="@color/navyBlue"
+    tools:context="Project1.AndroidActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnCall"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:id="@+id/linearLay1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="13dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:background="@drawable/outline"
             android:gravity="start"
             android:orientation="vertical">
 
-         <TextView
+            <TextView
                 android:id="@+id/textView"
                 style="@style/MaterialAlertDialog.Material3.Title.Icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
                 android:fontFamily="monospace"
                 android:gravity="center"
                 android:paddingTop="12dp"
@@ -53,33 +56,33 @@
                     android:src="@drawable/elearning" />
 
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/txtAnd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginBottom="11dp"
                 android:textSize="16dp"
                 android:textColor="@color/navyBlue"
                 android:layout_marginStart="12dp"
-                android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/Android" />
+
         </LinearLayout>
-
-
     </ScrollView>
-
 
     <Button
         android:id="@+id/btnCall"
-        android:layout_width="21dp"
-        android:layout_height="86dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="11dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingTop="12dp"
+        android:layout_margin="16dp"
         android:backgroundTint="@color/yellow"
-        android:gravity="center"
-        android:text="Call Me"
+        android:text="Purchase Now"
         android:textColor="@color/black"
-        android:visibility="gone" />
-</LinearLayout>
+        android:visibility="visible" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
