--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="Project.IntroActivity">
+    tools:context="Project1.IntroActivity">
 
 
     <TextView
@@ -33,14 +33,17 @@
 
     <Button
         android:id="@+id/btnGo"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:layout_marginTop="51dp"
+        android:layout_gravity="center"
+        android:layout_margin="12dp"
         android:gravity="center"
-        android:layout_marginTop="12dp"
-        android:text="GO"
-        android:textColor="@color/navyBlue"
-        android:backgroundTint="@color/yellow"/>
+        android:textColor="@color/black"
+        android:backgroundTint="@color/yellow"
+        android:textSize="22sp"
+        android:paddingTop="11dp"
+        android:text="Let's Go" />
 
 
 </LinearLayout>
