--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="Project.WebActivity"
+    tools:context="Project1.WebActivity"
     android:background="@color/navyBlue">
 
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btnCall"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <LinearLayout
                 android:id="@+id/linearLay1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="13dp"
+                android:layout_margin="8dp"
                 android:background="@drawable/outline"
                 android:gravity="start"
                 android:orientation="vertical">
@@ -73,13 +76,16 @@
 
         <Button
             android:id="@+id/btnCall"
-            android:layout_width="21dp"
-            android:layout_height="86dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="11dp"
             android:backgroundTint="@color/yellow"
             android:gravity="center"
-            android:text="Call Me"
+            android:text="Purchase Now"
             android:textColor="@color/black"
-            android:visibility="gone" />
-    </LinearLayout>
+            android:visibility="visible" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
